Fix chip gaps

--- a/src/components/Chip/Chip.css
+++ b/src/components/Chip/Chip.css
@@ -1,8 +1,6 @@
 .Chip {
   display: flex;
   background-color: white;
-  margin-bottom: 16px;
-  margin-right: 16px;
   border-radius: 4px;
   overflow: hidden;
   color: black;
