--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -6,4 +6,6 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+  align-content: stretch;
+  gap: 16px;
 }
